<resources>
    <string name="app_name">RainMusic</string>
    <string name="my">我的</string>
    <string name="square">发现</string>
    <string name="playlist_recommend">歌单推荐</string>
    <string name="song_recommend">新曲速递</string>
    <string name="top_list">排行榜</string>
    <string name="recommend">每日推荐</string>
    <string name="login">登录</string>
    <string name="local_music">本地音乐</string>
    <string name="liked">喜欢</string>
    <string name="history">历史</string>
    <string name="song_count">%d 首</string>
    <string name="everyday_lyrics">每日歌词</string>
    <string name="play_count">%d万播放</string>
    <string name="cancel">取消</string>
    <string name="rain_music">Rain Music</string>
    <string name="qq_login">QQ音乐登录</string>
    <string name="netease_login">网易云登录</string>
    <string name="phone_number">手机号</string>
    <string name="password_or_verify_code">密码或验证码</string>
    <string name="password_login">密码登录</string>
    <string name="verify_code_login">验证码登录</string>
    <string name="send_verify_code">发送验证码</string>
</resources>