<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/srl_square"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:baselineAligned="false">
                <FrameLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/iv_recommend"
                        android:src="@drawable/ic_rd"
                        android:layout_gravity="center"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:id="@+id/tv_recommend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/recommend"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextForeground"
                        android:textSize="12sp"
                        android:layout_marginTop="48dp"
                        android:layout_gravity="center"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/iv_top_list"
                        android:src="@drawable/ic_top_list"
                        android:layout_gravity="center"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:id="@+id/tv_top_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/top_list"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextForeground"
                        android:textSize="12sp"
                        android:layout_marginTop="48dp"
                        android:layout_gravity="center"/>
                </FrameLayout>
            </LinearLayout>

            <TextView
                android:text="@string/playlist_recommend"
                style="@style/sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_playlist_recommend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/song_recommend"
                style="@style/sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_song_recommend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/everyday_lyrics"
                style="@style/sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.card.MaterialCardView
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                app:cardBackgroundColor="@color/color_home_widget"
                app:cardCornerRadius="8dp"
                android:layout_height="250dp">

                <TextView
                    tools:text="杨柳岸，晓风残月"
                    android:id="@+id/tv_everyday_lyric"
                    android:textColor="@color/colorSubTextForeground"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <TextView
                    tools:text="巴拉巴拉"
                    android:id="@+id/tv_lyric_song"
                    android:textColor="@color/colorSubTextForeground"
                    android:textSize="12sp"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start" />

                <TextView
                    tools:text="Author"
                    android:id="@+id/tv_lyric_author"
                    android:textColor="@color/colorSubTextForeground"
                    android:textSize="12sp"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>